# Langford_OpenMP

./: CMakeLists.txt  Langford.h  Langford_par.h  main.cpp
